objects/Unconverted_Opportunities__c.object
<CustomObject>
    <fields>
        <fullName>CEC_User_Name__c</fullName>
        <description>Stores the CEC user name.</description>
        <externalId>true</externalId>
        <label>CEC User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <description>Denotes the type of notification for each user.</description>
        <externalId>true</externalId>
        <label>Notification Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Unconverted_Opportunities__c</fullName>
        <description>The number of opportunities which are not converted and need to be shown in Action Required section.
After September 2010 release: The number of deals which are of a specified notification type denoted by field Notification Type.</description>
        <label>Number of deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>PDR Opptys displayed in Action Required section</description>
    <label>Unconverted Opportunities</label>
    <nameField>
        <label>Unconverted Opportunities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unconverted Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>